<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MajorDroid</string>
    <string name="action_settings">Настройки</string>
    <string name="action_videorecord">Видео-сообщение</string>
    <string name="action_quit">Выход</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contros">Пульт управления</string>
    <string name="action_voice">Голосовая команда</string>
    <string name="action_refresh">Обновить</string>
    <string name="localUrl">Локальный адрес</string>
    <string name="localUrl_summary">Адрес сервера в локальной сети</string>
    <string name="globalUrl">Глобальный адрес</string>
    <string name="globalUrl_summary">Внешний адрес сервера</string>
    <string name="login">Логин</string>
    <string name="login_summary">Имя для внешнего доступа</string>
    <string name="passw">Пароль</string>
    <string name="passw_summary">Пароль для внешнего доступа</string>
    <string name="dostup">Режим доступа</string>
    <string name="dostup_summary">По локальной или глобальной сети</string>
    <string name="vid">Интерфейс</string>
    <string name="vid_summary">Обычный или полноэкранный</string>
    <string name="gps_switch">GPS-трекер</string>
    <string name="voice_switch">Голосовая активация</string>
    <string name="voice_phrase">Фраза активации</string>
    <string name="voice_proximity">Активация при приближении</string>
    <string name="gps_period_title">Периодичность отправки координат (в мин.)</string>
    <string name="gps_period">Периодичность</string>
    <string name="path_homepage">Домашняя страница</string>
    <string name="homepage_period">Авто-обновление страницы</string>
    <string name="homepage_period_summary">Период авто-обновления (минуты)</string>
    <string name="path_scripts">Обработчик скриптов</string>
    <string name="path_voice">Обработчик голосовых команд</string>
    <string name="path_tracker">Обработчик GPS</string>
    <string name="path_qr">Обработчик QR-кодов</string>
    <string name="path_video">Обработчик видео-сообщений</string>
    <string name="path_face">Обработчик детектора лиц</string>
    <string name="scriptdialog">Название скрипта в MajorDomo:</string>
    <string name="script_summary">Задайте название скрипта</string>
    <string name="scriptname1">Скрипт 1</string>
    <string name="scriptname2">Скрипт 2</string>
    <string name="scriptname3">Скрипт 3</string>
    <string name="scriptname4">Скрипт 4</string>
    <string name="scriptname5">Скрипт 5</string>
    <string name="scriptname6">Скрипт 6</string>
    <string name="scriptname7">Скрипт 7</string>
    <string name="scriptname8">Скрипт 8</string>
    <string name="scriptname9">Скрипт 9</string>
    <string name="title_activity_about">О программе</string>
    <string name="title_btn_rate">Оценить в маркете</string>
    <string name="about_url">v1.4b http://smartliving.ru</string>
    <string name="about_donate">Приложение для управления сервером умного дома MajorDomo.\n\nЛицензия Beerware - каждый довольный пользователь может выпить пива в честь автора android-приложения, или поддержать материально:\nWebMoney: R052376421830</string>
    <string name="wifihomenet">Wifi домашняя сеть</string>
    <string name="hotword">проснись</string>
    <string name="title_activity_video_recording">VideoRecordingActivity</string>
    <string name="title_activity_video_record">VideoRecordActivity</string>
    <string name="btnRecordStartTitle">Начать запись</string>
    <string name="btnRecordStopTitle">Закончить запись</string>
    <string name="btnCancelTitle">Отменить запись</string>
    <string name="qrcamera_switch">Камера для сканера штрих-кодов</string>
    <string name="msgcamera_switch">Камера для видео-сообщений</string>
    <string name="facecamera_switch">Камера для распознавания лиц</string>
    <string name="turncamera_switch">Поворот камеры для видео-сообщений</string>
    <string name="turnvideo_switch">Поворот видео</string>
    <string name="quality_switch">Качество видео</string>    
    
    <string name="maxlenght">Длительность сообщения, сек</string>
    <string name="maxlenght_summary">Максимальная длительность видео-сообщения</string>    
    
	<string name="maxsize">Размер сообщение, Мб</string>
    <string name="maxsize_summary">Максимальный размер видео-сообщения</string>    
    
	<string name="homeaftervideo">Обновление страницы</string>
    <string name="homeaftervideo_summary">Переходить на домашнюю страницу после записи видео</string>    

	<string name="facedetection">Распознавание лиц</string>
    <string name="facedetection_summary">Сервис распознавания лица в кадре</string>    
    

</resources>
